# talks

./: README.md
airflow-talk/: README.md
airflow-talk/code/: main.py
observability-talk/: README.md  docker-compose.yml  ping_endpoints1.sh  ping_endpoints2.sh
observability-talk/api/: dockerfile  package-lock.json  package.json
observability-talk/api/src/: app.ts  meter.ts  metrics.ts
observability-talk/api/src/routes/: metrics.ts
observability-talk/grafana/provisioning/dashboards/: nodejs-dashboard.json
observability-talk/grafana/provisioning/datasources/: default.yaml
observability-talk/loki/: local-config.yaml
observability-talk/prometheus/: prometheus.yml
prometheus-parser-talk/: .gitignore  Makefile  README.md  pyproject.toml
prometheus-parser-talk/jsx_parser/: __init__.py  jsx_lexer.py  jsx_parser.py
prometheus-parser-talk/jsx_parser/examples/: __init__.py  jsx_formatter.py  print_ast.py
prometheus-parser-talk/jsx_parser/tests/: test_jsx_parser.py
