[project]
name = "jsx-parser"
version = "0.1.0"
description = "A basic JSX parser and lexer implementation using Python and PLY"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "ply>=3.11",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.ruff]
# Enable ruff formatter
include = ["*.py"]
line-length = 88
target-version = "py38"

# Enable linting rules
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "RUF",  # Ruff-specific rules
]
ignore = []

# Exclude files and directories
exclude = [
    ".git",
    ".ruff_cache",
    "__pycache__",
    "build",
    "dist",
]

# Sort imports
[tool.ruff.isort]
known-first-party = ["jsx_parser"]
combine-as-imports = true
split-on-trailing-comma = true

# Format configuration
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto" 